# EPFL-LANES-Mask-Design

./: .gitattributes  .gitignore  README.md  bash.exe.stackdump  pyproject.toml
klayout/: EPFL-LANES.lyt
masks/: .registry.json
src/assembly/: wafer_local_gates_mask.py  wafer_mask.py
src/chips/: chiplet_local_gates_mask.py  chiplet_mask.py  chiplet_test.py  layout_geometry.py  photonic_chiplet_mask.py
src/components/: markers.py  verniers.py
src/components/photonics/: __init__.py  gratings.py  mzi.py  pulley.py  rings.py  technology.py
src/config/: layers.py  paths.py  run_registry.py  user_config.py  user_config.template.py
src/scripts/: generate_run.py
src/utils/: deplof_font.py  text.py
