[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gds-masks"
version = "0.1.0"
dependencies = ["gdstk", "gdsfactory", "numpy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
generate_run = "src.scripts.generate_run:main"